started adding scss files

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -6,3 +6,7 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+#simpleLogo {
+  background: url("../images/The_McPherson_University_logo.png");
+}
