--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -5,6 +5,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import "../lib/ionicons-2.0.1/scss/ionicons";
+@import "~vue-snotify/styles/dark";
 
 body {
   font-family: 'Ubuntu', sans-serif;
